# PythonWebHW16

./: README.md  pyproject.toml
config/: config.py
data/: address_book.db.sqlite3
migrations/versions/: bfe9e5b3a2bd_initial_migration.py
src/: __init__.py  models.py  routes.py
src/templates/: contact.html  detail.html  index.html  update.html
